--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,9 @@
-runtime: python39
+runtime: python
+env: flex
 entrypoint: gunicorn -b :$PORT main:app
 
-handlers:
-- url: /static
-  static_dir: static
+runtime_config: 
+    python_version: 3
 
-- url: /.*
-  script: auto
+env_variables:
+    CLOUD_STORAGE_BUCKET: cheapcheapticketproj
