--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,4 @@ postman-tests:
   script: 
     - cd backend
     - newman --version
-    - newman run UpdatedCollection.postman_collection.json
+    - newman run FinalCollection.json
