hidden postman scripts for deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
-postman-tests:
-  stage: test
-  image: 
-    name: postman/newman:alpine
-    entrypoint: [""]
-  script: 
-    - cd backend
-    - newman --version
-    - newman run FinalCollection.json
+#postman-tests:
+#  stage: test
+#  image: 
+#    name: postman/newman:alpine
+#    entrypoint: [""]
+#  script: 
+#   - cd backend
+#    - newman --version
+#    - newman run FinalCollection.json
