--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,1 +1,20 @@
+stages:
+  - build
+  - test
+  - deploy
 
+build_job:
+  stage: build
+  script:
+    - echo "Building the project..."
+
+test_job:
+  stage: test
+  script:
+    - echo "Running tests..."
+
+deploy_job:
+  stage: deploy
+  script:
+    - echo "Deploying to production..."
+  when: manual  # Specify when to run this job (e.g., manual, on_success, on_failure)
