--- a/backend/genre_mappings.json
+++ b/backend/genre_mappings.json
@@ -171,8 +171,6 @@
         "Rock": "Legends Only"
     },
     "genres_to_playlists_test": {
-        "Country": "Hot Country",
-        "Hip-Hop/Rap": "RapCaviar",
-        "Pop": "Summer Pop"
+        "Hip-Hop/Rap": "RapCaviar"
     }
 }
