Fixed bug in new_data.py that didn't add artist to event

--- a/backend/genre_mappings.json
+++ b/backend/genre_mappings.json
@@ -171,6 +171,8 @@
         "Rock": "Legends Only"
     },
     "genres_to_playlists_test": {
-        "Hip-Hop/Rap": "RapCaviar"
+        "Country": "Hot Country",
+        "Hip-Hop/Rap": "RapCaviar",
+        "Pop": "Summer Pop"
     }
 }
